--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -10,14 +10,22 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@radix-ui/react-slot": "^1.1.2",
+    "@tanstack/react-query": "^5.62.9",
+    "@tanstack/react-query-devtools": "^5.62.9",
+    "class-variance-authority": "^0.7.0",
+    "date-fns": "^3.6.0",
     "canvas-confetti": "^1.9.3",
     "framer-motion": "^12.23.12",
+    "lucide-react": "^0.474.0",
     "next": "15.5.3",
     "next-intl": "^4.3.8",
     "react": "19.1.0",
     "react-circular-progressbar": "^2.2.0",
     "react-confetti": "^6.4.0",
-    "react-dom": "19.1.0"
+    "react-dom": "19.1.0",
+    "react-icons": "^5.3.0",
+    "tailwind-merge": "^2.5.3"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
