--- a/apps/api/composer.json
+++ b/apps/api/composer.json
@@ -16,13 +16,15 @@
         "spatie/laravel-permission": "^6.21"
     },
     "require-dev": {
+        "cebe/php-openapi": "^1.0",
         "fakerphp/faker": "^1.23",
         "laravel/pail": "^1.2.2",
         "laravel/pint": "^1.24",
         "laravel/sail": "^1.41",
         "mockery/mockery": "^1.6",
         "nunomaduro/collision": "^8.6",
-        "phpunit/phpunit": "^11.5.3"
+        "phpunit/phpunit": "^11.5.3",
+        "symfony/yaml": "^6.0"
     },
     "autoload": {
         "psr-4": {
