--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -36,6 +36,7 @@
     "@types/react-dom": "^19",
     "eslint": "^9",
     "eslint-config-next": "15.5.3",
+    "openapi-typescript": "^6.7.5",
     "tailwindcss": "^4",
     "typescript": "^5"
   }
